# asv

./: .gitignore  LICENSE.md  README.md
docs/: groundstation_setup.md  hardware_setup.md  rambutan_setup.md  software.md  vehicle_setup.md
drawings_and_cad/lower_plate/: PRT-0018-01_PTX-25340-P_with_holes.step
drawings_and_cad/power_mounting_block/: PRT-0015-10_power_mounting_block.step
drawings_and_cad/upper_plate/: PRT-0013-01_upper_plate.dxf
groundstation/: README.md  build.sh  groundstation_setup.md
groundstation/config/: asv_initial_parms.params
groundstation/scripts/: run_asv_status.sh  run_mockbot.sh
groundstation/src/asv_status/: CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
groundstation/src/asv_status/asv_status/: asv_status.py
groundstation/src/asv_status/ui/: asv_status.ui
groundstation/src/mockbot/: package.xml  setup.cfg  setup.py
groundstation/src/mockbot/mockbot/: mockbot.py
hardware/: README.md  hardware_setup.md
hardware/drawings_and_cad/enclosure/: PRT-0020-01_PTS-25340-C_with_holes.step
hardware/drawings_and_cad/power_mounting_block/: PRT-0015-10_power_mounting_block.stl
hardware/drawings_and_cad/upper_plate/: PRT-0013-01_upper_plate.step
vehicle/: README.md  build.sh  conanfile.py  nano_setup.md  pixhawk_setup.md  router_setup.md
vehicle/conan-packages/: build.sh
vehicle/conan-packages/conan-concurrentqueue/: .gitlab-ci.yml  README.md  build.py  conanfile.py
vehicle/conan-packages/conan-concurrentqueue/test_package/: CMakeLists.txt  conanfile.py  example.cxx
vehicle/conan-packages/conan-readerwriterqueue/: .gitignore  .gitlab-ci.yml  LICENSE  README.md  conanfile.py
vehicle/conan-packages/conan-readerwriterqueue/test_package/: CMakeLists.txt  conanfile.py  example.cxx
vehicle/conan-packages/conan-serial/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  build.py  conanfile.py
vehicle/conan-packages/mavchannel/: CMakeLists.txt  conanfile.py
vehicle/conan-packages/mavchannel/include/mavchannel/: mavchannel.hpp  serialport.hpp  visibility_control.hpp
vehicle/conan-packages/mavchannel/src/: mavchannel.cpp  serialport.cpp
vehicle/conan-packages/mavlink2/: conanfile.py
vehicle/conan-packages/mavlink2/include/mavlink2/: mavlink_types.h  package.xml
vehicle/res/conan/: default
vehicle/res/systemd/: asv_bridge.service  mavproxy.service  recorder.service  status_light.service
vehicle/scripts/: run_asv_bridge.sh  run_mavproxy.sh  run_recorder.sh  run_status_light.sh
vehicle/src/asv_bridge/: CMakeLists.txt  package.xml
vehicle/src/asv_bridge/include/asv_bridge/: asv_bridge_node.hpp
vehicle/src/asv_bridge/src/: asv_bridge_node.cpp  main.cpp
vehicle/src/pinger/: package.xml  setup.cfg  setup.py
vehicle/src/pinger/pinger/: pinger_node.py
vehicle/src/recorder/: CMakeLists.txt  package.xml
vehicle/src/recorder/config/: recorder.yaml
vehicle/src/recorder/include/recorder/: periodic_scheduler.hpp  recorder_node.hpp
vehicle/src/recorder/src/: main.cpp  periodic_scheduler.cpp  recorder_node.cpp
vehicle/src/status_light/: package.xml  setup.cfg  setup.py
vehicle/src/status_light/status_light/: status_light.py
