<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asv_status</name>
  <version>1.0.0</version>
  <description>A simple GUI tool for starting/stopping and monitoring image recording on the ASV.</description>

  <maintainer email="developer@aqualink.org">Aqualink Developer</maintainer>
  <author email="developer@aqualink.org">Aqualink Developer</author>
  <license>TODO: License declaration</license>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
