<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mavlink</name>
  <version>2.0.0</version>
  <description>Contains mavlink v2 library and message headers</description>
  <maintainer email="developer@aqualink.org">Aqualink Developer</maintainer>
  <license>MIT</license>

  <!-- Build Tool Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>